# Projeto-Omni

./: .coverage  .coveragerc  .dockerignore  .env.example  .env.openclaude.example  .flake8  .gitignore  .gitleaks.toml  ADVANCED_SIMULATION_MODEL.md  API_PRODUCT_READINESS.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  AUTONOMOUS_DEBUGGING_MODEL.md  BUGS_FOUND.md  BUN_RUNTIME_CONSOLIDATION.md  CANONICAL_REPO_PATH.md  CHANGELOG.md  COGNITIVE_SUPERVISION_MODEL.md  CONTRIBUTING.md  Dockerfile  Dockerfile.demo  ENGINEERING_TOOL_MODEL.md  GOVERNANCE.md  HIERARCHICAL_PLANNING.md  INTEGRATION_STATUS_PHASE1.md  INTEGRATION_TODO.md  LARGE_TASK_RUN_INTELLIGENCE.md  MILESTONE_MANAGEMENT_MODEL.md  OBSERVABILITY_MODEL.md  OPERATIONAL_POLICY_MODEL.md  PHASE10_LARGE_PROJECT_AGENT_REPORT.md  PHASE16_OPERATIONAL_PLANNING.md  PHASE18_OPERATIONAL_LEARNING.md  PHASE19_COGNITIVE_ORCHESTRATION.md  PHASE21_GOAL_AND_CONSTRAINT_MODEL.md  PHASE23_INTERNAL_SIMULATION_LAYER.md  PHASE24_COGNITIVE_SPECIALIST_ARCHITECTURE.md  PHASE25_COGNITIVE_OBSERVABILITY_PANEL.md  PHASE6_COGNITIVE_LAB_REPORT.md  PR_DESCRIPTION.md  (+25 more)
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release_template_v1.0.0.md  trigger-workflows.txt
.logs/: curl-chat-payload.json  curl-payload.json
backend/rust/: .env.example  Cargo.toml  README.md
backend/rust/.cargo/: audit.toml  config.toml
backend/rust/crates/runtime/: Cargo.toml
backend/rust/crates/runtime/src/: lib.rs  permissions.rs  session.rs  tools.rs
backend/rust/src/: error.rs  historical_audit_capability.rs  main.rs  observability.rs  observability_auth.rs  protected_historical_audit.rs  run_control.rs  test_support.rs
backend/rust/src/historical_audit_capability/: supabase_capability_grant_repository.rs
configs/: fusion-manifest.json  runtimeConfig.js
contract/: brain-executor-contract.v1.json  runner-schema.v1.json
docs/: README.md  codex-fresh-branch-smoke-test.md  frontend-current-state.md  frontend-gap-analysis.md  frontend-implementation-plan.md  frontend-omni-cockpit-roadmap.md  frontend-phase-roadmap.md  overview.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  (+5 more)
(+2140 files in other folders)
