[package]
name = "omini-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
async-stream = "0.3"
futures-core = "0.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
rand_core = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
runtime = { path = "crates/runtime" }

[dev-dependencies]
tower = "0.5"
