[package]
name = "omni-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
async-stream = "0.3"
futures-core = "0.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
rand_core = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
runtime = { path = "crates/runtime" }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "query"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
uuid = "1.24.0"
time = { version = "0.3.53", features = ["parsing", "formatting"] }

[dev-dependencies]
tower = "0.5"
